--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
         <script src="data/LimEstatal_1.js"></script>
         <script src="data/LimMpal_2.js"></script>
         <script src="data/TrazaUrbana_3.js"></script>
-        <script src="data/II_4.js"></script>
-        <script src="data/I_5.js"></script>
-        <script src="data/CasosConfirmados_6.js"></script>
+        <script src="data/Jurisdicciones_4.js"></script>
+        <script src="data/II_5.js"></script>
+        <script src="data/I_6.js"></script>
+        <script src="data/CasosConfirmados_7.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[18.617056807213856,-99.18025095727889],[18.64943299283138,-99.13784376848737]]);
+        }).fitBounds([[18.311742046938733,-99.61439893009606],[19.15191674212396,-98.51391577443727]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -98,17 +99,17 @@
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        map.createPane('pane_F4Map2D_0');
-        map.getPane('pane_F4Map2D_0').style.zIndex = 400;
-        var layer_F4Map2D_0 = L.tileLayer('https://tile1.f4map.com/tiles/f4_2d/{z}/{x}/{y}.png', {
-            pane: 'pane_F4Map2D_0',
+        map.createPane('pane_CartoLight_0');
+        map.getPane('pane_CartoLight_0').style.zIndex = 400;
+        var layer_CartoLight_0 = L.tileLayer('https://a.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.pn', {
+            pane: 'pane_CartoLight_0',
             opacity: 1.0,
             attribution: '',
             minZoom: 1,
             maxZoom: 28,
         });
-        layer_F4Map2D_0;
-        map.addLayer(layer_F4Map2D_0);
+        layer_CartoLight_0;
+        map.addLayer(layer_CartoLight_0);
         function pop_LimEstatal_1(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
@@ -135,7 +136,7 @@
                 lineJoin: 'miter',
                 weight: 8.0, 
                 fillOpacity: 0,
-                interactive: false,
+                interactive: true,
             }
         }
         map.createPane('pane_LimEstatal_1');
@@ -143,7 +144,7 @@
         map.getPane('pane_LimEstatal_1').style['mix-blend-mode'] = 'normal';
         var layer_LimEstatal_1 = new L.geoJson(json_LimEstatal_1, {
             attribution: '',
-            interactive: false,
+            interactive: true,
             dataVar: 'json_LimEstatal_1',
             layerName: 'layer_LimEstatal_1',
             pane: 'pane_LimEstatal_1',
@@ -185,7 +186,7 @@
                 lineJoin: 'miter',
                 weight: 3.0, 
                 fillOpacity: 0,
-                interactive: false,
+                interactive: true,
             }
         }
         map.createPane('pane_LimMpal_2');
@@ -193,7 +194,7 @@
         map.getPane('pane_LimMpal_2').style['mix-blend-mode'] = 'normal';
         var layer_LimMpal_2 = new L.geoJson(json_LimMpal_2, {
             attribution: '',
-            interactive: false,
+            interactive: true,
             dataVar: 'json_LimMpal_2',
             layerName: 'layer_LimMpal_2',
             pane: 'pane_LimMpal_2',
@@ -292,7 +293,86 @@
         });
         bounds_group.addLayer(layer_TrazaUrbana_3);
         map.addLayer(layer_TrazaUrbana_3);
-        function pop_II_4(feature, layer) {
+        function pop_Jurisdicciones_4(feature, layer) {
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Id'] !== null ? autolinker.link(feature.properties['Id'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['JURIS'] !== null ? autolinker.link(feature.properties['JURIS'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NOM_JURIS'] !== null ? autolinker.link(feature.properties['NOM_JURIS'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NOM_CORTO'] !== null ? autolinker.link(feature.properties['NOM_CORTO'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_Jurisdicciones_4_0(feature) {
+            switch(String(feature.properties['JURIS'])) {
+                case '1':
+                    return {
+                pane: 'pane_Jurisdicciones_4',
+                opacity: 1,
+                color: 'rgba(35,35,210,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 4.0, 
+                fillOpacity: 0,
+                interactive: false,
+            }
+                    break;
+                case '2':
+                    return {
+                pane: 'pane_Jurisdicciones_4',
+                opacity: 1,
+                color: 'rgba(31,22,22,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 4.0, 
+                fillOpacity: 0,
+                interactive: false,
+            }
+                    break;
+                case '3':
+                    return {
+                pane: 'pane_Jurisdicciones_4',
+                opacity: 1,
+                color: 'rgba(205,33,188,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 4.0, 
+                fillOpacity: 0,
+                interactive: false,
+            }
+                    break;
+            }
+        }
+        map.createPane('pane_Jurisdicciones_4');
+        map.getPane('pane_Jurisdicciones_4').style.zIndex = 404;
+        map.getPane('pane_Jurisdicciones_4').style['mix-blend-mode'] = 'normal';
+        var layer_Jurisdicciones_4 = new L.geoJson(json_Jurisdicciones_4, {
+            attribution: '',
+            interactive: false,
+            dataVar: 'json_Jurisdicciones_4',
+            layerName: 'layer_Jurisdicciones_4',
+            pane: 'pane_Jurisdicciones_4',
+            onEachFeature: pop_Jurisdicciones_4,
+            style: style_Jurisdicciones_4_0,
+        });
+        bounds_group.addLayer(layer_Jurisdicciones_4);
+        map.addLayer(layer_Jurisdicciones_4);
+        function pop_II_5(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['OBJECTID'] !== null ? autolinker.link(feature.properties['OBJECTID'].toLocaleString()) : '') + '</td>\
@@ -398,9 +478,9 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_II_4_0() {
+        function style_II_5_0() {
             return {
-                pane: 'pane_II_4',
+                pane: 'pane_II_5',
                 opacity: 1,
                 color: 'rgba(35,35,35,0.5)',
                 dashArray: '',
@@ -413,21 +493,21 @@
                 interactive: false,
             }
         }
-        map.createPane('pane_II_4');
-        map.getPane('pane_II_4').style.zIndex = 404;
-        map.getPane('pane_II_4').style['mix-blend-mode'] = 'normal';
-        var layer_II_4 = new L.geoJson(json_II_4, {
+        map.createPane('pane_II_5');
+        map.getPane('pane_II_5').style.zIndex = 405;
+        map.getPane('pane_II_5').style['mix-blend-mode'] = 'normal';
+        var layer_II_5 = new L.geoJson(json_II_5, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_II_4',
-            layerName: 'layer_II_4',
-            pane: 'pane_II_4',
-            onEachFeature: pop_II_4,
-            style: style_II_4_0,
+            dataVar: 'json_II_5',
+            layerName: 'layer_II_5',
+            pane: 'pane_II_5',
+            onEachFeature: pop_II_5,
+            style: style_II_5_0,
         });
-        bounds_group.addLayer(layer_II_4);
-        map.addLayer(layer_II_4);
-        function pop_I_5(feature, layer) {
+        bounds_group.addLayer(layer_II_5);
+        map.addLayer(layer_II_5);
+        function pop_I_6(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['OBJECTID'] !== null ? autolinker.link(feature.properties['OBJECTID'].toLocaleString()) : '') + '</td>\
@@ -533,9 +613,9 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_I_5_0() {
+        function style_I_6_0() {
             return {
-                pane: 'pane_I_5',
+                pane: 'pane_I_6',
                 opacity: 1,
                 color: 'rgba(35,35,35,0.5)',
                 dashArray: '',
@@ -548,34 +628,25 @@
                 interactive: false,
             }
         }
-        map.createPane('pane_I_5');
-        map.getPane('pane_I_5').style.zIndex = 405;
-        map.getPane('pane_I_5').style['mix-blend-mode'] = 'normal';
-        var layer_I_5 = new L.geoJson(json_I_5, {
+        map.createPane('pane_I_6');
+        map.getPane('pane_I_6').style.zIndex = 406;
+        map.getPane('pane_I_6').style['mix-blend-mode'] = 'normal';
+        var layer_I_6 = new L.geoJson(json_I_6, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_I_5',
-            layerName: 'layer_I_5',
-            pane: 'pane_I_5',
-            onEachFeature: pop_I_5,
-            style: style_I_5_0,
+            dataVar: 'json_I_6',
+            layerName: 'layer_I_6',
+            pane: 'pane_I_6',
+            onEachFeature: pop_I_6,
+            style: style_I_6_0,
         });
-        bounds_group.addLayer(layer_I_5);
-        map.addLayer(layer_I_5);
-        function pop_CasosConfirmados_6(feature, layer) {
+        bounds_group.addLayer(layer_I_6);
+        map.addLayer(layer_I_6);
+        function pop_CasosConfirmados_7(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">FOLD_ID</th>\
                         <td class="visible-with-data" id="FOLD_ID">' + (feature.properties['FOLD_ID'] !== null ? autolinker.link(feature.properties['FOLD_ID'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['casos — cas_si'] !== null ? autolinker.link(feature.properties['casos — cas_si'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['casos — cas_defun'] !== null ? autolinker.link(feature.properties['casos — cas_defun'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['casos — cas_en base'] !== null ? autolinker.link(feature.properties['casos — cas_en base'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <th scope="row">casos — cas_dx</th>\
@@ -589,11 +660,11 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_CasosConfirmados_6_0(feature) {
+        function style_CasosConfirmados_7_0(feature) {
             switch(String(feature.properties['casos — cas_dx'])) {
                 case 'DENGUE NO GRAVE':
                     return {
-                pane: 'pane_CasosConfirmados_6',
+                pane: 'pane_CasosConfirmados_7',
                 radius: 6.0,
                 stroke: false,
                 fill: true,
@@ -604,7 +675,7 @@
                     break;
                 case 'DENGUE GRAVE':
                     return {
-                pane: 'pane_CasosConfirmados_6',
+                pane: 'pane_CasosConfirmados_7',
                 radius: 6.0,
                 stroke: false,
                 fill: true,
@@ -615,7 +686,7 @@
                     break;
                 case 'DENGUE CON SIGNOS DE ALARMA':
                     return {
-                pane: 'pane_CasosConfirmados_6',
+                pane: 'pane_CasosConfirmados_7',
                 radius: 6.0,
                 stroke: false,
                 fill: true,
@@ -626,7 +697,7 @@
                     break;
                 case 'DEFUNCIÓN POR DENGUE':
                     return {
-                pane: 'pane_CasosConfirmados_6',
+                pane: 'pane_CasosConfirmados_7',
                 shape: 'triangle',
                 radius: 6.4,
                 stroke: false,
@@ -638,26 +709,26 @@
                     break;
             }
         }
-        map.createPane('pane_CasosConfirmados_6');
-        map.getPane('pane_CasosConfirmados_6').style.zIndex = 406;
-        map.getPane('pane_CasosConfirmados_6').style['mix-blend-mode'] = 'normal';
-        var layer_CasosConfirmados_6 = new L.geoJson(json_CasosConfirmados_6, {
+        map.createPane('pane_CasosConfirmados_7');
+        map.getPane('pane_CasosConfirmados_7').style.zIndex = 407;
+        map.getPane('pane_CasosConfirmados_7').style['mix-blend-mode'] = 'normal';
+        var layer_CasosConfirmados_7 = new L.geoJson(json_CasosConfirmados_7, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_CasosConfirmados_6',
-            layerName: 'layer_CasosConfirmados_6',
-            pane: 'pane_CasosConfirmados_6',
-            onEachFeature: pop_CasosConfirmados_6,
+            dataVar: 'json_CasosConfirmados_7',
+            layerName: 'layer_CasosConfirmados_7',
+            pane: 'pane_CasosConfirmados_7',
+            onEachFeature: pop_CasosConfirmados_7,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.shapeMarker(latlng, style_CasosConfirmados_6_0(feature));
+                return L.shapeMarker(latlng, style_CasosConfirmados_7_0(feature));
             },
         });
-        bounds_group.addLayer(layer_CasosConfirmados_6);
-        map.addLayer(layer_CasosConfirmados_6);
+        bounds_group.addLayer(layer_CasosConfirmados_7);
+        map.addLayer(layer_CasosConfirmados_7);
         map.on("zoomend", function(e) {
             if (map.getZoom() <= 19 && map.getZoom() >= 9) {
                 map.addLayer(layer_LimMpal_2);
@@ -683,16 +754,17 @@
         var baseMaps = {};
         var overlaysTree = [
         {label: '<b>Casos Dengue S.E.  25</b>', selectAllCheckbox: true, children: [
-            {label: 'Casos Confirmados<br /><table><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_6_DENGUENOGRAVE0.png" /></td><td>DENGUE NO GRAVE</td></tr><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_6_DENGUEGRAVE1.png" /></td><td>DENGUE GRAVE</td></tr><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_6_DENGUECONSIGNOSDEALARMA2.png" /></td><td>DENGUE CON SIGNOS DE ALARMA</td></tr><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_6_DEFUNCIÓNPORDENGUE3.png" /></td><td>DEFUNCIÓN POR DENGUE</td></tr></table>', layer: layer_CasosConfirmados_6},]},
+            {label: 'Casos Confirmados<br /><table><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_7_DENGUENOGRAVE0.png" /></td><td>DENGUE NO GRAVE</td></tr><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_7_DENGUEGRAVE1.png" /></td><td>DENGUE GRAVE</td></tr><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_7_DENGUECONSIGNOSDEALARMA2.png" /></td><td>DENGUE CON SIGNOS DE ALARMA</td></tr><tr><td style="text-align: center;"><img src="legend/CasosConfirmados_7_DEFUNCIÓNPORDENGUE3.png" /></td><td>DEFUNCIÓN POR DENGUE</td></tr></table>', layer: layer_CasosConfirmados_7},]},
         {label: '<b>Estratos de Riego</b>', selectAllCheckbox: true, children: [
-            {label: '<img src="legend/I_5.png" /> I', layer: layer_I_5},
-            {label: '<img src="legend/II_4.png" /> II', layer: layer_II_4},]},
+            {label: '<img src="legend/I_6.png" /> I', layer: layer_I_6},
+            {label: '<img src="legend/II_5.png" /> II', layer: layer_II_5},]},
+            {label: 'Jurisdicciones<br /><table><tr><td style="text-align: center;"><img src="legend/Jurisdicciones_4_JSI0.png" /></td><td>JS I</td></tr><tr><td style="text-align: center;"><img src="legend/Jurisdicciones_4_JSII1.png" /></td><td>JS II</td></tr><tr><td style="text-align: center;"><img src="legend/Jurisdicciones_4_JSIII2.png" /></td><td>JS III</td></tr></table>', layer: layer_Jurisdicciones_4},
         {label: '<b>Mapa Base</b>', selectAllCheckbox: true, children: [
             {label: '<img src="legend/TrazaUrbana_3.png" /> Traza Urbana', layer: layer_TrazaUrbana_3},
             {label: '<img src="legend/LimMpal_2.png" /> Lim. Mpal.', layer: layer_LimMpal_2},
             {label: '<img src="legend/LimEstatal_1.png" /> Lim. Estatal', layer: layer_LimEstatal_1},]},
         {label: '<b>Terreno</b>', selectAllCheckbox: true, children: [
-            {label: "F4 Map - 2D", layer: layer_F4Map2D_0},]},]
+            {label: "Carto Light", layer: layer_CartoLight_0},]},]
         var lay = L.control.layers.tree(null, overlaysTree,{
             //namedToggle: true,
             //selectorBack: false,
