--- a/index2.html
+++ b/index2.html
@@ -102,7 +102,7 @@
     </aside>
 
     <!-- Aquí se carga tu mapa de QGIS2Web -->
-    <iframe id="mapframe" src="index1.html" title="Mapa SSMapas"></iframe>
+    <iframe id="mapframe" src="index.html" title="Mapa SSMapas"></iframe>
   </div>
 
   <footer>
